force-app/main/default/objects/Billing__c/Billing__c.object-meta.xml
<CustomObject>
    <label>Billing</label>
    <nameField>
        <displayFormat>B-{00000}</displayFormat>
        <label>Billing Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>