force-app/main/default/objects/Billing__c/fields/Cash_Withdrawal__c.field-meta.xml
<CustomField>
    <fullName>Cash_Withdrawal__c</fullName>
    <label>Cash Withdrawal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>