force-app/main/default/objects/Billing__c/fields/CreditCard__c.field-meta.xml
<CustomField>
    <fullName>CreditCard__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CreditCard</label>
    <referenceTo>CreditCard__c</referenceTo>
    <relationshipLabel>Billing</relationshipLabel>
    <relationshipName>Billing</relationshipName>
    <type>Lookup</type>
</CustomField>