force-app/main/default/objects/Billing__c/fields/Number_of_transactions__c.field-meta.xml
<CustomField>
    <fullName>Number_of_transactions__c</fullName>
    <label>Number of transactions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>