force-app/main/default/objects/Billing__c/fields/start_Date__c.field-meta.xml
<CustomField>
    <fullName>start_Date__c</fullName>
    <label>start Date</label>
    <type>Date</type>
</CustomField>