force-app/main/default/objects/Billing__c/fields/withdrawal__c.field-meta.xml
<CustomField>
    <fullName>withdrawal__c</fullName>
    <label>withdrawal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>